...
        android:id="@+id/mainContentLL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/headerContentLL"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:background="#ff64c2f4"
            android:orientation="vertical">

            <TextView
...

            </LinearLayout>

        </LinearLayout>

        <ListView
            android:id="@+id/listTempLV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></ListView>
    </LinearLayout>

</ScrollView><!--</LinearLayout>-->

